--- a/Index.html
+++ b/Index.html
@@ -36,7 +36,7 @@
           <div class='card'>
           <img src="images/backpack.png" alt="picture description" width="80">
           <h2>Awesome</h2>
-          <p>An awesome app, <strong>very awesome</strong> app</p>
+          <p>An awesome app, <strong>very awesome</strong> service</p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3">
